--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
       - Creational:
           - Singleton: design-patterns/creational/singleton.md
           - Factory Method: design-patterns/creational/factory-method.md
+          - Abstract Factory: design-patterns/creational/abstract-factory.md
       - Structural:
           - Overview: design-patterns/structural/index.md
           # Add other structural pattern links here
