--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: "Tech Knowledege Hub"
+site_name: "Tech Knowledge Hub"
 theme:
   name: "material"
 
@@ -28,6 +28,7 @@ nav:
           - Factory Method: design-patterns/creational/factory-method.md
           - Abstract Factory: design-patterns/creational/abstract-factory.md
           - Builder: design-patterns/creational/builder.md
+          - Prototype: design-patterns/creational/prototype.md
       - Structural:
           - Overview: design-patterns/structural/index.md
           # Add other structural pattern links here
