add composite - and delete the attempt restructure folders

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
       - Structural:
           - Adapter: design-patterns/structural/adapter.md
           - Bridge: design-patterns/structural/bridge.md
+          - Composite: design-patterns/structural/composite.md
           # Add other structural pattern links here
       - Behavioral:
           - Overview: design-patterns/behavioral/index.md
