--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
           - Bridge: design-patterns/structural/bridge.md
           - Composite: design-patterns/structural/composite.md
           - Decorator: design-patterns/structural/decorator.md
+          - Facade: design-patterns/structural/facade.md
           # Add other structural pattern links here
       - Behavioral:
           - Overview: design-patterns/behavioral/index.md
