--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ nav:
           # Add other structural pattern links here
       - Behavioral:
           - Chain of Responsibility: design-patterns/behavioral/chain-of-responsibility.md
+          - Command: design-patterns/behavioral/command.md
           # Add other behavioral pattern links here
   - System Design: system-design/index.md
 
