--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
           - Chain of Responsibility: design-patterns/behavioral/chain-of-responsibility.md
           - Command: design-patterns/behavioral/command.md
           - Iterator: design-patterns/behavioral/iterator.md
+          - Mediator: design-patterns/behavioral/mediator.md
           # Add other behavioral pattern links here
   - System Design: system-design/index.md
 
