--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
           - Iterator: design-patterns/behavioral/iterator.md
           - Mediator: design-patterns/behavioral/mediator.md
           - Memento: design-patterns/behavioral/memento.md
+          - Observer: design-patterns/behavioral/observer.md
           # Add other behavioral pattern links here
   - System Design: system-design/index.md
 
