--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ nav:
           - Observer: design-patterns/behavioral/observer.md
           - State: design-patterns/behavioral/state.md
           - Strategy: design-patterns/behavioral/strategy.md
+          - Template Method: design-patterns/behavioral/template-method.md
           # Add other behavioral pattern links here
   - System Design: system-design/index.md
 
